--- a/themes/adritian-free-hugo-theme/i18n/en.yaml
+++ b/themes/adritian-free-hugo-theme/i18n/en.yaml
@@ -86,19 +86,19 @@
   translation: "Experience"
 
 - id: "experience_description"
-  translation: "This is where you can highlight a bit over your experience. Years of total experience, specialization, etc."
+  translation: ""
 
 - id: "experience_button"
   translation: "LinkedIn" 
 
 - id: "experience_button_url"
-  translation: "https://www.linkedin.com/in/adrianmoreno/"
+  translation: "https://www.linkedin.com/in/william-arnberg-72188018b/"
 
 - id: "experience_button2"
   translation: "Download resume"
 
 - id: "experience_button2_url"
-  translation: "/img/general/user-smile-fill.svg"
+  translation: "/william_arnberg_cv.pdf"
 
 - id: "experience_button3"
   translation: "View all"
