--- a/themes/adritian-free-hugo-theme/i18n/en.yaml
+++ b/themes/adritian-free-hugo-theme/i18n/en.yaml
@@ -65,7 +65,9 @@
 - id: "about_content"
   translation:  <p class="lead">
       </p>
-      I
+      Since I was young tinkering and taking things apart to figure out what makes something tick, this has grown into  
+      a drive to build long lasting solutions with security and simplicity in mind.
+
       <p class="lead">
 
     </p>
