--- a/themes/adritian-free-hugo-theme/i18n/en.yaml
+++ b/themes/adritian-free-hugo-theme/i18n/en.yaml
@@ -50,8 +50,8 @@
   translation: " "
 
 - id: "showcase_description"
-  translation: "I am a Game programmer specializing in Engine and Systems development, currently looking for an internship starting August 2025. </br> 
-  “I am part of The Game Assembly’s internship program. As per the agreement between the Games Industry and The Game Assembly, neither student nor company may be in contact with one another regarding internships before April 23rd. Any internship offers can be made on May 5th, at the earliest.”"
+  translation: "I am a Game programmer specializing in Engine and Systems development, currently looking for an internship starting August 2025."
+  
 
 - id: "showcase_button"
   translation: "Contact"
